samples/_failures_safe/1761213281_853535_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6fe6c593.c: In function ‘main’:
./samples/SAFE/__tmp_6fe6c593.c:128:12: error: missing terminating " character
  128 |     printf("Enter log entries (format: YYYY-MM-DD HH:MM
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_6fe6c593.c:128:5: error: expected expression at end of input
  128 |     printf("Enter log entries (format: YYYY-MM-DD HH:MM
      |     ^~~~~~
./samples/SAFE/__tmp_6fe6c593.c:128:5: error: expected declaration or statement at end of input
